--- a/Programowanie w Data Science - podstawy.ipynb
+++ b/Programowanie w Data Science - podstawy.ipynb
@@ -254,10 +254,73 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25.225\n",
+      "25.225\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Zadanie 21 - Utwórz fukcję, która jako argument będzie przyjmować listę liczb zmiennoprzecinkowych, a jej wynikiem będzie średnia arytmetyczna. Porównaj jej wynik z wynikiem fukcji mean z pakietu numpy\n",
+    "import numpy as np \n",
+    "\n",
+    "def function(x):\n",
+    "    sum = 0.0\n",
+    "    for a in x:\n",
+    "        sum = sum + a\n",
+    "        \n",
+    "    return sum/len(x)\n",
+    "    \n",
+    "list = [1.5, 3.4, 6.7, 89.3]\n",
+    "print(function(list))\n",
+    "print(np.mean(list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1371.9968749999996\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Zadanie 25 - Utwórz fukcję, która jako argument będzie przyjmować listę liczb zmiennoprzecinkowych, a jej wynikiem będzie drugi moment centralny (wariancja)\n",
+    "\n",
+    "def function(x):\n",
+    "    sum = 0.0\n",
+    "    for a in x:\n",
+    "        sum = sum + a   \n",
+    "    avg = sum/len(x)\n",
+    "\n",
+    "    variance = 0\n",
+    "    for i in x:\n",
+    "        variance = variance + (avg - i)**2\n",
+    "    return variance/len(x)\n",
+    "\n",
+    "list = [1.5, 3.4, 6.7, 89.3]\n",
+    "print(function(list))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Zadanie 26 - Utwórz funkcję, która jako argument będzie przyjmować listę liczb zmiennoprzecinkowych, a jej wynikiem będzie trzeci moment centralny (skośność)\n"
+   ]
   }
  ],
  "metadata": {
