--- a/Programowanie w Data Science - podstawy.ipynb
+++ b/Programowanie w Data Science - podstawy.ipynb
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -299,10 +299,7 @@
     "# Zadanie 25 - Utwórz fukcję, która jako argument będzie przyjmować listę liczb zmiennoprzecinkowych, a jej wynikiem będzie drugi moment centralny (wariancja)\n",
     "\n",
     "def function(x):\n",
-    "    sum = 0.0\n",
-    "    for a in x:\n",
-    "        sum = sum + a   \n",
-    "    avg = sum/len(x)\n",
+    "    avg = np.mean(x)\n",
     "\n",
     "    variance = 0\n",
     "    for i in x:\n",
@@ -315,11 +312,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.1460147669940166\n"
+     ]
+    }
+   ],
    "source": [
-    "# Zadanie 26 - Utwórz funkcję, która jako argument będzie przyjmować listę liczb zmiennoprzecinkowych, a jej wynikiem będzie trzeci moment centralny (skośność)\n"
+    "# Zadanie 26 - Utwórz funkcję, która jako argument będzie przyjmować listę liczb zmiennoprzecinkowych, a jej wynikiem będzie trzeci moment centralny (skośność)\n",
+    "import numpy as np \n",
+    "\n",
+    "def function(x):\n",
+    "    avg = np.mean(x)\n",
+    "    \n",
+    "    result = 0\n",
+    "    for number in x:\n",
+    "        result = result + (number-avg)**3\n",
+    "    \n",
+    "    return (1/(np.std(x))**3) * result/len(x)\n",
+    "\n",
+    "list = [1.5, 3.4, 6.7, 89.3]\n",
+    "print(function(list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9923833664264938\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Zadanie 28 - Utwórz funkcję, która jako argument będzie przyjmować dwie listy o równej liczbie elementów, a jej wynikiem będzie współczynnik korelacji\n",
+    "\n",
+    "def function(x_numbers, y_numbers):\n",
+    "    x_number_len = len(x_numbers)\n",
+    "    y_number_len = len(y_numbers)\n",
+    "        \n",
+    "    if len(x_numbers) != len(y_numbers):\n",
+    "        raise ValueError('nie działa')\n",
+    "    \n",
+    "    x_sum = sum(x_numbers)\n",
+    "    y_sum = sum(y_numbers)\n",
+    "    xy_sum = sum([a*b for a,b in zip(x_numbers, y_numbers)])\n",
+    "                         \n",
+    "    x_sum2 = sum(i**2 for i in x_numbers)\n",
+    "    y_sum2 = sum(i**2 for i in y_numbers)\n",
+    "    \n",
+    "    counter = ((x_number_len*xy_sum) - (x_sum*y_sum))\n",
+    "    denominator_1 = ((x_number_len*x_sum2) - x_sum**2)\n",
+    "    denominator_2 = ((y_number_len*y_sum2) - y_sum**2)\n",
+    "    \n",
+    "    return counter / math.sqrt(denominator_1*denominator_2)\n",
+    "\n",
+    "print(function([1.3,2.5,3.8,4.2,5.9,6.6,7.7,3.5,7.2,7.1], [1,2,3,4,5,6,7,3,7,7]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.9960159362549816, 267.40678196305754]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Zadanie 29 - Utwórz funkcję, która jako argument będzie przyjmować dwie listy o równej liczbie elementów, a jej wynikiem będą współczynniki regresji liniowej\n",
+    "\n",
+    "def linear_regression(x_numbers, y_numbers):\n",
+    "    x_number_len = len(x_numbers)\n",
+    "    y_number_len = len(y_numbers)\n",
+    "    \n",
+    "    if len(x_numbers) != len(y_numbers):\n",
+    "        raise ValueError('nie działa')\n",
+    "           \n",
+    "\n",
+    "    x_sum = sum(x_numbers)\n",
+    "    y_sum = sum(y_numbers)\n",
+    "    xy_sum = sum([a*b for a,b in zip(x_numbers, y_numbers)])\n",
+    "    \n",
+    "    x_sum2 = sum(i**2 for i in x_numbers)\n",
+    "    y_sum2 = sum(i**2 for i in y_numbers)\n",
+    "           \n",
+    "    a_counter = ((x_number_len*xy_sum) - (x_sum*y_sum))\n",
+    "    denominator = ((x_number_len*x_sum2) - x_sum**2) \n",
+    "    a = a_counter / denominator\n",
+    "           \n",
+    "    b_counter = ((x_number_len*x_sum2)*y_sum) - (x_sum*xy_sum)\n",
+    "    b = b_counter / denominator\n",
+    "           \n",
+    "           \n",
+    "    return [a, b]\n",
+    "           \n",
+    "print(linear_regression([1.3,2.5,3.8,4.2,5.9,6.6,7.7,3.5,7.2,7.1], [1,2,3,4,5,6,7,3,7,7]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Zadanie 35 - Utwórz klasę Prostokąt, a następnie na jej podstawie (korzystając z mechanizmu dziedziczenia) utwórz klasę Kwadrat\n",
+    "\n",
+    "class Ractangle:\n",
+    "    def __init__(self, a, b):\n",
+    "        self.a = a\n",
+    "        self.b = b\n",
+    "    \n",
+    "    \n",
+    "class Square(Ractangle):\n",
+    "    def __init__(self, a):\n",
+    "        self.a = a\n",
+    "        \n",
+    "a = Square(4)\n",
+    "print(isinstance(a, Ractangle))"
    ]
   }
  ],
