--- a/Programowanie w Data Science - podstawy.ipynb
+++ b/Programowanie w Data Science - podstawy.ipynb
@@ -395,7 +395,7 @@
    "source": [
     "#Zadanie 29 - Utwórz funkcję, która jako argument będzie przyjmować dwie listy o równej liczbie elementów, a jej wynikiem będą współczynniki regresji liniowej\n",
     "\n",
-    "def linear_regression(x_numbers, y_numbers):\n",
+    "def function(x_numbers, y_numbers):\n",
     "    x_number_len = len(x_numbers)\n",
     "    y_number_len = len(y_numbers)\n",
     "    \n",
