--- a/Programowanie w Data Science - podstawy.ipynb
+++ b/Programowanie w Data Science - podstawy.ipynb
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
     "           \n",
     "    return [a, b]\n",
     "           \n",
-    "print(linear_regression([1.3,2.5,3.8,4.2,5.9,6.6,7.7,3.5,7.2,7.1], [1,2,3,4,5,6,7,3,7,7]))"
+    "print(function([1.3,2.5,3.8,4.2,5.9,6.6,7.7,3.5,7.2,7.1], [1,2,3,4,5,6,7,3,7,7]))"
    ]
   },
   {
